--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "framer-motion": "^10.16.4",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
